fix: make notification service compatible with Java 11